# avataar_ge_test

./: CMakeLists.txt  README.md
data/: Sphere.blend  Sphere.mtl
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
material_test/: aabb.cpp  aabb.hpp  app.cpp  app.hpp  camera.cpp  camera.hpp  file_manager.hpp  globals.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
shaders/: material_debug_normal.frag  material_debug_normal.vert  material_lambert.frag  material_lambert.vert  material_pbr.frag  material_pbr.vert
